# Omega-Engine

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
engine/: main.cpp
engine/core/: Application.cpp  Application.h
engine/platform/sdl/: SDLWindow.cpp  SDLWindow.h
